# MLA_analysis

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: deepseek_v2.yaml  deepseek_v2_lite.yaml  deepseek_v3.yaml
paper/: appendix_experimental_details.tex  appendix_per_layer_tables.tex  appendix_ushape_discussion.tex  fig_ushape.tex
results/deepseek-v2/: exp1_metrics.npz
results/deepseek-v2-lite/: exp1_metrics.npz  exp2_activation.npz  exp3_clamping_results.json
results/deepseek-v3/: exp1_metrics.npz
scripts/: download_models.sh  plot_comparison.py  run_exp1_weight_audit.py  run_exp2_activation.py  run_exp3_clamping.py  wait_and_run_exp3.sh
src/eval/: clamp_schedules.py  downstream.py  perplexity.py
src/experiments/: exp1_weight_audit.py  exp2_activation.py  exp3_clamping.py
src/metrics/: activation_alignment.py  gram_distance.py  principal_angles.py
src/model_io/: model_loader.py  shard_loader.py  weight_clamper.py  weight_extractor.py
src/proxy/: toy_mla.py
src/utils/: plotting.py
tests/: test_activation_alignment.py  test_clamp_schedules.py  test_gram_distance.py  test_principal_angles.py  test_weight_extractor.py
