[project]
name = "mla-geometry"
version = "0.1.0"
description = "Empirical investigation of subspace geometry in Multi-head Latent Attention"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=5.0.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.64.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "lm-eval>=0.4.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
